--- a/android/build.gradle
+++ b/android/build.gradle
@@ -3,6 +3,7 @@ version '1.0-SNAPSHOT'
 
 buildscript {
     ext.kotlin_version = '1.6.21'
+    ext.android_gradle_version = '7.2.0'
     repositories {
         google()
         mavenCentral()
